# healthcare-worker-api

./: .gitignore  .gitleaksignore  .pylintrc  .tool-versions  Makefile  README.md  buildspec.yml  pyproject.toml  pytest.ini
.github/workflows/: cicd-1-pull-request.yaml  stage-2-test.yaml  stage-3-build.yaml
buildspecs/: build.yml  deploy.yml  destroy-pr-env.yml  integration-tests.yml  static-env-deploy-trigger.yml  trigger_deployment.yml
docs/developer-guides/: Scripting_Terraform.md
infrastructure/: .gitignore  main.tf  outputs.tf  variables.tf
infrastructure/deploy/: app_deploy.tf
infrastructure/environments/: dev.tfvars  int.tfvars  prod.tfvars
infrastructure/mgmt/: app_deploy.tf  codebuild.tf  codedeploy.tf  deployment_pipeline.tf  gateway.tf  iam.tf  outputs.tf  pipeline_notifications.tf  s3.tf  secrets.tf  sns.tf  static_env_deployment_pipeline.tf  variables.tf
infrastructure/mgmt/status_reporting/: pyproject.toml  status_reporting.py
infrastructure/modules/hcw-api/: api.yml  api_gateway.tf  apim.tf  apim_instance_delete.sh  apim_instance_deploy.sh  lambda.tf  proxygen-setup.sh  variables.tf  vpc.tf
infrastructure/terraform_state/: dynamodb.tf  s3.tf
integration_tests/: locals.properties  test_worker.py
integration_tests/config/: base_environment.py  current_env.py  ft_environment.py  pr_environment.py
integration_tests/utils/: generate_access_token.py  integration_test_base.py  test-1.pem
scripts/: build-app.sh  deploy-app.sh
scripts/config/vale/styles/Vocab/words/: accept.txt
scripts/generate_access_token/: pyproject.toml  test-1.pem.pub
scripts/generate_access_token/src/: generate.py
scripts/generate_jwt/: pyproject.toml
scripts/generate_jwt/src/: generate.py
scripts/tests/: style.sh  test.mk  unit.sh
specification/: healthcare-worker-api.yaml
src/: event_type.py  greeting.py  hcw_exception.py  main.py  main_test.py
src/fhir/: fhir_object.py  worker.py
src/logs/: log.py
src/request_handlers/: base_handler.py  handlers.py  worker.py  worker_test.py
src/tests/: test_greeting.py
tests/: test_greeting.py  test_worker.py
