[tool.poetry]
name = "hcw-api"
version = "0.0.1"
authors = ["Ian Robinson <ian.robinson27@nhs.net>", "Sat Thakor <satyarajsinh.thakor1@nhs.net>"]
description = "Healthcare Worker API for fetching healthcare worker information"
readme = "README.md"
packages = [{include = "*/*", from="src"}, {include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.33"
pytest = "^8.3.3"
aws-lambda-powertools = "^3.1.0"
pydantic = "1.10.18"
pytest-nhsd-apim = "^3.4.3"

[tool.poetry.scripts]
start = "main:local_start"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
